<?xml version="1.0" encoding="utf-8"?>
<!--
/*
    TimisoaraPublicTransport - display public transport information on your device
    Copyright (C) 2011  Mihai Balint

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
*/
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/StationStatusRow"
    style="@style/LikeTitleContainer"
    android:background="@drawable/row_back_even"
    android:baselineAligned="false">
    
    <TextView android:id="@+id/aprfooltext"
        style="@style/LikeTitleIcon" 
        android:layout_height="30dp"
        android:text="8 persoane asteapta"
        android:textSize="10sp"
        android:textColor="#FF300000"
        android:layout_marginLeft="2.6dp"
        android:layout_width="70dp"
        android:visibility="invisible"/>
    
   	<RelativeLayout
   	    style="@style/LinePath"
   	    android:visibility="visible" >
	   	<ImageView android:id="@+id/LinePathLine"
	   	    style="@style/PathBullet"
	   	    android:background="@drawable/line_middle_green"
	   	    android:contentDescription="@string/lblStation"
	   	    android:layout_height="fill_parent"
	   	/>
   	    <ImageView android:id="@+id/LinePathBullet"
	   	    style="@style/PathBullet"
	   	    android:background="@drawable/line_bullet_green"
	   	    android:contentDescription="@string/lblStation"
	   	/>
	   	<ImageView android:id="@+id/VehicleArrivingBullet"
   	    	style="@style/VehicleArrivingBullet"
	   	    android:background="@drawable/arrow_right_lower_half"
	   	    android:contentDescription="@string/lblVehicle"
	   	/>
   	    <ImageView android:id="@+id/VehicleBoardingBullet"
   	    	style="@style/VehicleBoardingBullet"
	   	    android:background="@drawable/arrow_right"
	   	    android:contentDescription="@string/lblVehicle"
	   	/>
	   	<ImageView android:id="@+id/VehicleDepartingBullet"
   	    	style="@style/VehicleDepartingBullet"
	   	    android:background="@drawable/arrow_right_upper_half"
	   	    android:contentDescription="@string/lblVehicle"
	   	/>
	</RelativeLayout>
   		
   	<Button android:id="@+id/aprfoolbutton"
   	    android:text="Solicita vehicul"
   	    android:lines="2"
   	    android:layout_width="60dp" 
   	    android:layout_height="35dp"
   	    android:textSize="12sp"
   	    android:padding="0dp"
   	    android:textColor="#FFA00000"
   	    android:background="@drawable/button_flat_back"
   	    android:layout_marginRight="3dp"
   	    android:visibility="gone"/>
   	
   	<LinearLayout
   	    android:layout_width="0dp"
   	    android:layout_height="wrap_content"
   	    android:layout_marginBottom="3dp"
   	    android:layout_marginTop="3dp"
   	    android:layout_weight="1"
   	    android:gravity="center_vertical"
   	    android:orientation="vertical" >

	    <TextView android:id="@+id/StationLabel"
	        android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#FF555555"
		  	android:text="@string/lblExampleDeparture"
			android:textSize="14sp"
	        />
   		<LinearLayout 
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="left"
	   	    android:orientation="horizontal" >
		    <TextView android:id="@+id/StationTime"
		        android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
		   	    android:layout_marginRight="20sp"
				android:textColor="#FF0F0F0F"
			  	android:text="@string/lblExampleTime"
				android:textSize="14sp"
		        />
		    <TextView android:id="@+id/StationError"
		        android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textColor="#FFCC0000"
			  	android:text=""
				android:textSize="14sp"
		        />
   		</LinearLayout>
   	</LinearLayout>
	<ImageView android:id="@+id/ConnKindImg"
		android:src="@drawable/btn_multi_dark"
		android:layout_width="20sp"
		android:layout_height="20sp"
		android:layout_gravity="top"
		android:layout_marginRight="10dp"
		android:layout_marginTop="5dp"
		android:scaleType="fitCenter"
		android:contentDescription="@string/lblExampleLineKind"
		android:visibility="visible"
		/>
</LinearLayout>
