<?xml version="1.0" encoding="utf-8"?>
<!--
/*
    TimisoaraPublicTransport - display public transport information on your device
    Copyright (C) 2011  Mihai Balint

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
*/
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/MainView"
    android:background="@color/row_even"
    >
    <include
        layout="@layout/frag_title_back"
        />
    <RelativeLayout
        android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
    >
		<ImageView
			android:id="@+id/medal_shelf"
		    android:layout_width="320dp"
		    android:layout_height="262dp"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:src="@drawable/medal_shelf" 
		    />
        
        <TextView
			android:id="@+id/medal_shelf_name"
			android:text="@string/achvYourName" 
	    	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	   	    android:layout_alignTop="@id/medal_shelf"
	   	    android:layout_alignLeft="@id/medal_shelf"
			android:layout_marginTop="0dp"
			android:layout_marginLeft="20dp"
			android:textColor="#FF000000"
			android:textSize="30dp"
			android:gravity="left"
			android:onClick="changeYourName"
			android:clickable="true"
			/>
        <ImageView
	   	    android:id="@+id/medal1"
	   	    android:src="@drawable/medal1_shadow"
	   	    android:contentDescription=""
	   	    android:layout_alignTop="@id/medal_shelf"
	   	    android:layout_centerHorizontal="true"
			android:layout_marginTop="45dp"
	    	android:layout_width="82dp"
    		android:layout_height="50dp"
	   	    />
		<TextView
			android:text="@string/achvPhila" 
	    	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	   	    android:layout_below="@id/medal1"
	   	    android:layout_centerHorizontal="true"
			android:layout_marginTop="-10dp"
			android:textColor="#FF000000"
			android:textSize="20dp"
			android:gravity="center"/>
		<TextView
			android:text="@string/achvPhilaDesc" 
	    	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	   	    android:layout_below="@id/medal1"
	   	    android:layout_centerHorizontal="true"
			android:layout_marginTop="40dp"
			android:textColor="#FF000000"
			android:textSize="15dp"
			android:gravity="center"/>
		
    </RelativeLayout>
</LinearLayout>

